Fixed bottom gap in content-bar-list class. Removed height and added padding in sectin-why class

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,9 +86,9 @@
 
 /* PO CO MI STRONA? */
 .section-why {
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #251b43;
-  padding-top: 9.6rem;
+  padding: 9.6rem 0;
 }
 
 .content-bar {
@@ -100,6 +100,7 @@
 }
 
 .content-bar-list {
+  margin-bottom: 0;
   font-size: 1.6rem;
   display: flex;
   justify-content: center;
